# term

./: .scalafmt.conf  README.md  build.sbt
.github/workflows/: ci.yml  release.yml
project/: plugin.sbt
term-size/src/main/scala/term/: NativeTermSize.scala  NoTermSize.scala  Size.scala  TermSize.scala  TputTermSize.scala
term-size/src/native/: CMakeLists.txt  termsize.c
term-size/src/native/include/: term_NativeTermSize.h
term-size/src/test/scala/term/: BaseTermSizeSuite.scala  NativeTermSizeSuite.scala  NoTermSizeSuite.scala  TermSizeSuite.scala  TputTermSizeSuite.scala
